--- a/starterSource/starterSource/style.css
+++ b/starterSource/starterSource/style.css
@@ -5,7 +5,7 @@ body, html {
   color: White;
 }
 
-.cd-logo {
+.cd-logo, .kitchen-equipment {
   position: relative;
   background-position: center;
   background-repeat: no-repeat;
@@ -32,3 +32,7 @@ h3 {
   background-color:#642580;
   padding:50px 80px;
 }
+
+.kitchen-equipment {
+  background-image: url("utensils.jpg");
+} 
