--- a/starterSource/starterSource/style.css
+++ b/starterSource/starterSource/style.css
@@ -5,7 +5,7 @@ body, html {
   color: White;
 }
 
-.cd-logo, .kitchen-equipment {
+.cd-logo, .kitchen-equipment, .cake-ingredients {
   position: relative;
   background-position: center;
   background-repeat: no-repeat;
@@ -36,3 +36,7 @@ h3 {
 .kitchen-equipment {
   background-image: url("utensils.jpg");
 } 
+
+.cake-ingredients {
+  background-image: url("ingredients.jpg");
+}
