--- a/starterSource/starterSource/style.css
+++ b/starterSource/starterSource/style.css
@@ -11,7 +11,9 @@ body, html {
   background-repeat: no-repeat;
   background-color: #642580;
   background-size: cover;
-  min-height: 100%;
+  min-height: 75%;
+  
+  background-attachment: fixed;
 }
 
 .cd-logo {
