--- a/starterSource/starterSource/style.css
+++ b/starterSource/starterSource/style.css
@@ -42,3 +42,17 @@ h3 {
 .cake-ingredients {
   background-image: url("ingredients.jpg");
 }
+.caption {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+  text-align: center;
+}
+
+.border {
+  background-color: #41BAC1;
+  color: white;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px;
+}
