--- a/starterSource/starterSource/style.css
+++ b/starterSource/starterSource/style.css
@@ -56,3 +56,9 @@ h3 {
   font-size: 25px;
   letter-spacing: 10px;
 }
+
+@media only screen and (max-device-width: 1024px) {
+  .cd-logo, .layer-cake, .kitchen-equipment, .cake-ingredients, .bowl-of-cakemix, .cake-in-oven, .decorated-cake {
+    background-attachment: scroll;
+  }
+}
